// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the CountryForm component. Should match snapshot - create. 1`] = `
<div
  aria-describedby="headlessui-description-:r2:"
  aria-modal="true"
  class="fixed z-100"
  data-headlessui-state="open"
  data-testid="dialog"
  id="headlessui-dialog-:r0:"
  role="dialog"
>
  <div
    class="fixed inset-0 bg-dial-gray opacity-80"
  />
  <div
    class="fixed inset-0 flex items-center justify-center"
  >
    <div
      class="max-h-screen w-screen md:w-3/5 lg:w-3/5 xl:w-1/2 p-8 transform bg-white shadow-xl rounded-2xl flex flex-col opacity-100 scale-100"
      data-headlessui-state="open"
      id="headlessui-dialog-panel-:r1:"
    >
      <div
        class="bg-edit overflow-auto py-4 px-8 flex flex-col gap-3"
        data-headlessui-state="open"
        id="headlessui-description-:r2:"
      >
        <div
          class="flex justify-start text-xl"
          data-testid="dialog-body"
        >
          <div
            class="w-full"
          >
            <form
              id="country-form"
            >
              <div
                class="pb-12 mb-4 flex flex-col gap-3"
              >
                <div
                  class="text-2xl font-semibold text-dial-sapphire pb-4"
                >
                  Create New Country
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="country-name"
                >
                  <label
                    class="text-dial-sapphire required-field"
                    for="name"
                  >
                    Name
                  </label>
                  <input
                    class="w-full"
                    id="name"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="flex justify-start gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            form="country-form"
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the CountryForm component. Should match snapshot - edit. 1`] = `
<div
  aria-describedby="headlessui-description-:r5:"
  aria-modal="true"
  class="fixed z-100"
  data-headlessui-state="open"
  data-testid="dialog"
  id="headlessui-dialog-:r3:"
  role="dialog"
>
  <div
    class="fixed inset-0 bg-dial-gray opacity-80"
  />
  <div
    class="fixed inset-0 flex items-center justify-center"
  >
    <div
      class="max-h-screen w-screen md:w-3/5 lg:w-3/5 xl:w-1/2 p-8 transform bg-white shadow-xl rounded-2xl flex flex-col opacity-100 scale-100"
      data-headlessui-state="open"
      id="headlessui-dialog-panel-:r4:"
    >
      <div
        class="bg-edit overflow-auto py-4 px-8 flex flex-col gap-3"
        data-headlessui-state="open"
        id="headlessui-description-:r5:"
      >
        <div
          class="flex justify-start text-xl"
          data-testid="dialog-body"
        >
          <div
            class="w-full"
          >
            <form
              id="country-form"
            >
              <div
                class="pb-12 mb-4 flex flex-col gap-3"
              >
                <div
                  class="text-2xl font-semibold text-dial-sapphire pb-4"
                >
                  Edit Country
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                  data-testid="country-name"
                >
                  <label
                    class="text-dial-sapphire required-field"
                    for="name"
                  >
                    Name
                  </label>
                  <input
                    class="w-full"
                    id="name"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="flex justify-start gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            form="country-form"
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
